--- a/swBlog/test/fixtures/comments.yml
+++ b/swBlog/test/fixtures/comments.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: comments
+#
+#  id         :integer          not null, primary key
+#  blog_id    :integer
+#  user_id    :integer
+#  content    :string(255)      not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
