--- a/swBlog/Gemfile
+++ b/swBlog/Gemfile
@@ -1,9 +1,6 @@
 source 'https://ruby.taobao.org/'
 
-
-# Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.0'
-# Use sqlite3 as the database for Active Record
 gem 'mysql2'
 
 gem 'bootstrap-sass'
@@ -27,20 +24,13 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
-# Use ActiveModel has_secure_password
-# gem 'bcrypt', '~> 3.1.7'
-
-# Use Unicorn as the app server
-# gem 'unicorn'
-
-# Use Capistrano for deployment
-# gem 'capistrano-rails', group: :development
-
 gem 'thin'
 
 #登录
 gem 'authlogic'
 
+#blog编辑插件
+gem 'ckeditor'
 
 #备注
 gem 'annotate', github: 'ctran/annotate_models'
@@ -48,10 +38,8 @@ gem 'annotate', github: 'ctran/annotate_models'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-
   # Access an IRB console on exception pages or by using <%= console %> in views
   gem 'web-console', '~> 2.0'
-
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
