--- a/swBlog/test/fixtures/user_categories.yml
+++ b/swBlog/test/fixtures/user_categories.yml
@@ -1,3 +1,14 @@
+# == Schema Information
+#
+# Table name: user_categories
+#
+#  id          :integer          not null, primary key
+#  user_id     :integer
+#  category_id :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
