--- a/swBlog/Gemfile
+++ b/swBlog/Gemfile
@@ -34,6 +34,8 @@ gem 'ckeditor'
 gem 'responders'
 #文件上传
 gem 'paperclip'
+# 分页
+gem 'kaminari'
 
 #备注
 gem 'annotate', github: 'ctran/annotate_models'
